Added author and changed title

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Raxez Rules</title>
+  <title>EgHard.pl Regulamin</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.min.css">
+  <meta name="author" content="Mikolaj Snochowski, www.github.com/snoh666"/>
 </head>
 <body>
   <div class="site">
@@ -91,5 +92,13 @@
       </div>
   </div>
   <script src="./index.js"></script>
+
+  <!--
+
+    Page designed and coded by snoh666
+      - https://github.com/snoh666
+      - mail: snochopl@gmail.com
+
+  -->
 </body>
 </html>
