Added meta tag description and keywords

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.min.css">
   <meta name="author" content="Mikolaj Snochowski, www.github.com/snoh666"/>
+  <meta name="description" content="Regulamin serwera minecraft mega drop hc eghard.pl"/>
+  <meta name="keywords" content="eghard.pl, regulamin, regulamin eghard.pl, eghard.pl regulamin, mega drop hc, minecraft server, minecraft serwer"/>
 </head>
 <body>
   <div class="site">
