Added back to store button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
   <div class="site">
       <div class="rules">
-        <header><h1>Regulamin Serwera</h1></header>
+        <div class="header-line">
+          <button class="shop-btn">Sklep</button>
+          <div class="header-title">
+            <h1>Regulamin Serwera</h1>
+          </div>
+        </div>
         <div class="rules-container">
           <section>
             <div class="rule-section">
