Added mobile view for header-line with button and h1 inside

--- a/index.html
+++ b/index.html
@@ -16,95 +16,85 @@
       <div class="rules">
         <div class="header-line">
           <button class="shop-btn">Sklep</button>
-          <div class="header-title">
+          <div>
             <h1>Regulamin Serwera</h1>
           </div>
         </div>
         <div class="rules-container">
-          <section>
-            <div class="rule-section">
-            <h3>Postanowienia Ogolne</h3>
+          <div class="rule-section">
+          <h3>Postanowienia Ogolne</h3>
+          <ul>
+            <li>Nieznajomość regulaminu nie zwalnia gracza z odpowiedzialności grając na serwerze.</li>
+            <li>Gracz rejestrując się i grając na serwerze akceptuje regulamin.</li>
+            <li>Każdy gracz ma obowiązek przestrzegać regulamin.</li>
+            <li>Podczas nałożenia blokady na konto gracza ranking oraz przedmioty z kontem związane mogą zostać usunięte.</li>
+          </ul>
+        </div>
+          <div class="rule-section">
+            <h3>Administracja</h3>
             <ul>
-              <li>Nieznajomość regulaminu nie zwalnia gracza z odpowiedzialności grając na serwerze.</li>
-              <li>Gracz rejestrując się i grając na serwerze akceptuje regulamin.</li>
-              <li>Każdy gracz ma obowiązek przestrzegać regulamin.</li>
-              <li>Podczas nałożenia blokady na konto gracza ranking oraz przedmioty z kontem związane mogą zostać usunięte.</li>
+              <li>Administracja ma prawo przejrzeć wszystkie pliki związane z Minecraft, które mogą zawierać potencjalne cheaty
+                [niedozwolone modyfikacje] bez zgody gracza.</li>
+              <li>Administracja ma prawo poprosić gracza w każdej chwili o udostępnienie ss'ów oraz folderów które mogą zawierać
+                potencjalne cheaty.</li>
+              <li>Administracja nieuczestnicząca w rozgrywce nie ułatwia innym gry.</li>
+              <li>Administracja nie sprzedaje i nie rozdaje itemów.</li>
+              <li>Administarcja nie odpowiada za szkody poniesione na koncie w skutek kradzieży konta lub wymian pomiędzy
+                graczami.</li>
+              <li>Administracja ma prawo wymagać od graczy zainstalowania programów: Skype, TeamSpeak3, Join.me, TeamViewer i
+                AnyDesk w
+                celu wykrycia niedozwolonych modyfikacji.</li>
             </ul>
           </div>
-          </section>
-          <section>
-            <div class="rule-section">
-              <h3>Administracja</h3>
-              <ul>
-                <li>Administracja ma prawo przejrzeć wszystkie pliki związane z Minecraft, które mogą zawierać potencjalne cheaty
-                  [niedozwolone modyfikacje] bez zgody gracza.</li>
-                <li>Administracja ma prawo poprosić gracza w każdej chwili o udostępnienie ss'ów oraz folderów które mogą zawierać
-                  potencjalne cheaty.</li>
-                <li>Administracja nieuczestnicząca w rozgrywce nie ułatwia innym gry.</li>
-                <li>Administracja nie sprzedaje i nie rozdaje itemów.</li>
-                <li>Administarcja nie odpowiada za szkody poniesione na koncie w skutek kradzieży konta lub wymian pomiędzy
-                  graczami.</li>
-                <li>Administracja ma prawo wymagać od graczy zainstalowania programów: Skype, TeamSpeak3, Join.me, TeamViewer i
-                  AnyDesk w
-                  celu wykrycia niedozwolonych modyfikacji.</li>
-              </ul>
-            </div>
-          </section>
-          <section>
-            <div class="rule-section">
-              <h3>Gracze</h3>
-              <ul>
-                <li>Zakazane jest używanie CheatClientów (np. Huzuni, Nodus, Resilience, itp.) - ban 10 dni.</li>
-                <li>Dozwolone modyfikacje: ReisMinimap oraz Optifine + Shadery. (ew. inne mniej ułatwiające gre modyfikacje).</li>
-                <li>Używanie przeźroczystych tekstur typu szkło / xray grozi banem (10 dni).</li>
-                <li>Bugowanie grozi banem (12 godzin).</li>
-                <li>Niezastosowanie się do polecenia oraz brak współpracy z administracją grozi banem (10 dni).</li>
-                <li>Zakazane jest tworzenie multikont.</li>
-                <li>Używanie obraźliwych i wulgarnych nicków / pseudonimów na serwerze grozi banem na zawsze.</li>
-                <li>Współpraca z cheaterem grozi banem (ban 10 dni).</li>
-                <li>Wielokrotne zabijanie tej samej osoby w celu uzyskania punktów rangkingowych grozi banem i resetem punktów
-                  rankingowych.</li>
-                <li>Wylogowanie się podczas sprawdzania grozi banem (ban 10 dni).</li>
-                <li>Stosowanie programów automatyzujące kopanie (np. automatyczne naprawianie kilofa, chodzenie przy pomocy
-                  TinyTask) będąc
-                  AFK grozi banem (2 dni).</li>
-                <li>Usuwanie reklam, za które otrzymało się rangi / nagrody grozi banem na cała edycję.</li>
-                <li>Zakaz szerzenia błednych / nieprawdziwych informacji.</li>
-                <li>Zakaz wzbogacania sie kosztem serwera.</li>
-                <li>Zakaz oszukiwania / prób oszustwa administracji.</li>
-                <li>Gracz ma obowiązek mieć włączony czat, w przeciwnym wypadku może zostać zbanowany z powodu braku odzewu
-                  podczas
-                  sprawdzania w celu wykrycia niedozwolonych modyfikacji.</li>
-                <li>Gracz dodaje oraz dołącza do gildii na własną odpowiedzialność.</li>
-                <li>Zabijanie multikont w celu uzyskania punktów rangkingowych grozi banem i resetem punktów rankingowych.</li>
-                <li>Zakaz używania Forge.</li>
-              </ul>
-            </div>
-          </section>
-          <section>
-            <div class="rule-section">
-              <h3>Czat</h3>
-              <ul>
-                <li>Obraza graczy / administracji / serwera / rodziny graczy lub administracji grozi mutem lub banem.</li>
-                <li>Spamowanie / floodowanie na chacie / helpopie grozi mutem lub banem.</li>
-                <li>Reklamowanie innych serwerów / stron internetowych / filmów / treści pornograficznych grozi mutem lub banem.
-                </li>
-                <li>Udostępnianie danych osobowych i prywatnych (nazwiska, numery telefonów, zdjęcia, Facebooki itp.) grozi mutem
-                  lub banem.</li>
-                <li>Zakaz ogłaszania ofert niezwiązanych z grą Minecraft na czacie globalnym.</li>
-                <li>Zakaz przekręcania nicków administracji.</li>
-              </ul>
-            </div>
-          </section>
-          <section>
-            <div class="rule-section">
-              <h3>Kupno rang</h3>
-              <ul>
-                <li>Użytkownik kupując usługę musi być online na serwerze oraz mieć przynajmniej sześć wolnych miejsc w ekwipunku.
-                </li>
-              </ul>
-            </div>
-          </section>
+          <div class="rule-section">
+            <h3>Gracze</h3>
+            <ul>
+              <li>Zakazane jest używanie CheatClientów (np. Huzuni, Nodus, Resilience, itp.) - ban 10 dni.</li>
+              <li>Dozwolone modyfikacje: ReisMinimap oraz Optifine + Shadery. (ew. inne mniej ułatwiające gre modyfikacje).</li>
+              <li>Używanie przeźroczystych tekstur typu szkło / xray grozi banem (10 dni).</li>
+              <li>Bugowanie grozi banem (12 godzin).</li>
+              <li>Niezastosowanie się do polecenia oraz brak współpracy z administracją grozi banem (10 dni).</li>
+              <li>Zakazane jest tworzenie multikont.</li>
+              <li>Używanie obraźliwych i wulgarnych nicków / pseudonimów na serwerze grozi banem na zawsze.</li>
+              <li>Współpraca z cheaterem grozi banem (ban 10 dni).</li>
+              <li>Wielokrotne zabijanie tej samej osoby w celu uzyskania punktów rangkingowych grozi banem i resetem punktów
+                rankingowych.</li>
+              <li>Wylogowanie się podczas sprawdzania grozi banem (ban 10 dni).</li>
+              <li>Stosowanie programów automatyzujące kopanie (np. automatyczne naprawianie kilofa, chodzenie przy pomocy
+                TinyTask) będąc
+                AFK grozi banem (2 dni).</li>
+              <li>Usuwanie reklam, za które otrzymało się rangi / nagrody grozi banem na cała edycję.</li>
+              <li>Zakaz szerzenia błednych / nieprawdziwych informacji.</li>
+              <li>Zakaz wzbogacania sie kosztem serwera.</li>
+              <li>Zakaz oszukiwania / prób oszustwa administracji.</li>
+              <li>Gracz ma obowiązek mieć włączony czat, w przeciwnym wypadku może zostać zbanowany z powodu braku odzewu
+                podczas
+                sprawdzania w celu wykrycia niedozwolonych modyfikacji.</li>
+              <li>Gracz dodaje oraz dołącza do gildii na własną odpowiedzialność.</li>
+              <li>Zabijanie multikont w celu uzyskania punktów rangkingowych grozi banem i resetem punktów rankingowych.</li>
+              <li>Zakaz używania Forge.</li>
+            </ul>
+          </div>
+          <div class="rule-section">
+            <h3>Czat</h3>
+            <ul>
+              <li>Obraza graczy / administracji / serwera / rodziny graczy lub administracji grozi mutem lub banem.</li>
+              <li>Spamowanie / floodowanie na chacie / helpopie grozi mutem lub banem.</li>
+              <li>Reklamowanie innych serwerów / stron internetowych / filmów / treści pornograficznych grozi mutem lub banem.
+              </li>
+              <li>Udostępnianie danych osobowych i prywatnych (nazwiska, numery telefonów, zdjęcia, Facebooki itp.) grozi mutem
+                lub banem.</li>
+              <li>Zakaz ogłaszania ofert niezwiązanych z grą Minecraft na czacie globalnym.</li>
+              <li>Zakaz przekręcania nicków administracji.</li>
+            </ul>
+          </div>
+          <div class="rule-section">
+            <h3>Kupno rang</h3>
+            <ul>
+              <li>Użytkownik kupując usługę musi być online na serwerze oraz mieć przynajmniej sześć wolnych miejsc w ekwipunku.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
   </div>
